<resources>
    <string name="app_name">Proyecto04</string>
    <string name="url_photo">https://jsonplaceholder.typicode.com/photos</string>
    <string name="menu_ordenar_titulo">Titulo</string>
    <string name="menu_ordenar_id">ID</string>
    <string name="title_activity_informacion">InformacionActivity</string>
    <string name="abrir_navegador">Abrir navegador</string>
    <string name="title_activity_settings">Settings</string>
    <string name="url">URL</string>
    <string name="thumbnail_url">Thumbnail URL</string>
    <string name="album_id">Álbum ID</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="descargar_imagen_de_album">Descargar imágen de álbum</string>
    <!-- Strings related to Settings -->
</resources>
