<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.com.luis.proyecto04.InformacionActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/url_album_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="98dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_url_album"
            app:layout_constraintTop_toBottomOf="@+id/album" />

        <TextView
            android:id="@+id/album_id_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toEndOf="@+id/textView_id_album"
            app:layout_constraintTop_toBottomOf="@+id/url_album_intent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView_fondo"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:src="@color/primary_light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/album"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_url_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="340dp"
            android:text="@string/url"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_id_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/album_id"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url_album_intent" />

        <Button
            android:id="@+id/navegar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/abrir_navegador"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_descargar_imagen" />

        <Button
            android:id="@+id/button_descargar_imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/descargar_imagen_de_album"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_id_intent" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/menu_ordenar_titulo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>